// Vitest Snapshot v1

exports[`Component: BooleanIcon > ui > value false 1`] = `
<div>
  <i
    class="icon material-icons"
  >
    check_box_outline_blank
  </i>
</div>
`;

exports[`Component: BooleanIcon > ui > value true 1`] = `
<div>
  <i
    class="icon material-icons"
  >
    check_box
  </i>
</div>
`;
